# test_prof

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/test_prof/: __init__.py
tests/: test_test_prof.py
