[tool.poetry]
name = "test_prof"
version = "0.0.0"
description = "Test for professor"
authors = ["Marion BIGOTTE"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
